--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 		<title>Clockwork Counselling</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="description" content="Counselling for adults offered via video, telephone, or face to face in Gosforth, Newcastle upon
+		Tyne.">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="icon" type="image/x-icon" href="images\FaviconLogo.jpg">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
