--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 -->
 <html>
 	<head>
-		<title>Clockwork Counselling</title>
+		<title>Clockwork Counselling - BACP registered and accredited counsellor</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="description" content="Counselling for adults offered via video, telephone, or face to face in Gosforth, Newcastle upon
-		Tyne.">
+		Tyne. Counselling supervision for qualified and trainee counsellors.">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="icon" type="image/x-icon" href="images\FaviconLogo.jpg">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
