touch icon, h1 and contact logo.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		Tyne. Counselling supervision for qualified and trainee counsellors.">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="icon" type="image/x-icon" href="images\FaviconLogo.jpg">
+		<link rel="apple-touch-icon" sizes="310x310" href="images\apple-touch-icon-310x310.png">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -49,7 +50,7 @@
 								Tel: 07925 406024
 							</blockquote>
 							<header class="major">
-								<h2>Clockwork Counselling</h2>
+								<h1>Clockwork Counselling</h1>
 							</header>
 						<p><span class="image right"><img src="images\iStock-1426454034.jpg" alt="" /></span>Counselling for adults offered via video, telephone, or face to face in Gosforth, Newcastle upon
 							Tyne.</p>
@@ -179,6 +180,7 @@
 								<div class="box alt">
 									<div class="row gtr-uniform">
 										<div class="col-4"><span class="image fit"><img src="images\BACP Logo - 90789 (3).png" alt="" /></span></div>
+										<div class="col-4"><span class="image fit"><img src="images\contactLogo.jpg" alt="" /></span></div>
 									</div>
 								</div>
 							</section>
